refs bug 340407 - fixed 1.4 compliance issues